slurm_LOG/err_622865.log
  File "/isilon/datalake/gurcan_rsch/scratch/WSI/zhengjie/CODE/cell_classification/generate_single_cls_predictions.py", line 5
    生成单分类模型（interval 1-46）的完整测试预测生成单分类模型（interval 1-46）的完整测试预测
           ^
SyntaxError: invalid character '（' (U+FF08)
